# tenseinput-demo

./: .gitignore
serial/: CMakeLists.txt
serial/include/: message_type.h  serialInterface.h  serial_port.h
serial/src/: main.cpp  main123123.cpp  serialInterface.cpp  serial_port.cpp
tenseinput_captureImage/Assets/: VideoManager.cs  WSATestCertificate.pfx
tenseinput_captureImage/Assets/HoloToolkit-SpatialMapping-230/Input/Scripts/: BasicCursor.cs  HandsManager.cs
tenseinput_captureImage/Assets/HoloToolkit-SpatialMapping-230/SpatialMapping/Scripts/: UDPListener.cs
tenseinput_captureImage/Assets/Holograms/: Cursor.prefab
tenseinput_captureImage/Assets/Scenes/: tenseinput_capture.unity
tenseinput_captureImage/Assets/Scripts/: PlaySpaceManager.cs
tenseinput_captureImage/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
tenseinput_demo/Assets/: WSATestCertificate.pfx
tenseinput_demo/Assets/HoloToolkit-SpatialMapping-230/Input/Scripts/: BasicCursor.cs  GestureManager.cs  HandsManager.cs
tenseinput_demo/Assets/HoloToolkit-SpatialMapping-230/SpatialMapping/Scripts/: UDPListener.cs
tenseinput_demo/Assets/Prefabs/: Line.prefab
tenseinput_demo/Assets/Scenes/: tenseinput_demo.unity
tenseinput_demo/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
tenseinput_moving/Assets/: LineManager.cs  ObjectManager.cs  ObjectOperation.cs  WSATestCertificate.pfx  tenseinput_moving.unity
tenseinput_moving/Assets/Prefabs/: debug_group.prefab
tenseinput_moving/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+10 files in other folders)
